fix covid | add custom scrollbar

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,19 @@
+html::-webkit-scrollbar {
+    width: 5px;
+    background-color: #f9f9fd;
+}
+
+html::-webkit-scrollbar-thumb {
+    border-radius: 5px;
+    background-color: rgba(244, 67, 54, 0.85);
+}
+
+html::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.2);
+    border-radius: 5px;
+    background-color: #f9f9fd;
+}
+
 body {
     margin: 0;
 
